# dndice

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  Taskfile  __init__.py  demonstration.py  evaltree.py  exceptions.py  helpers.py  list-fftabs.py  operators.py  pyproject.toml  roll.py  rolling.py  setup.py  specification.bnf  tokenize_flat.py  tokenize_rolls.py  tokenizer.py
dndice/: __init__.py  core.py  roller.py
dndice/lib/: evaltree.py  exceptions.py  helpers.py  operators.py  state_machine.py  tokenizer.py
docs/: conf.py  entrypoint.rst  index.rst  libraries.rst  usage.rst
docs/_static/: overrides.css
lib/: evaltree.py  exceptions.py  helpers.py
rolling/: __init__.py  core.py  exceptions.py  helpers.py  operators.py  rolling.py  tokenizer.py
rolling/lib/: evaltree.py  exceptions.py  operators.py  tokenizer.py
tests/: __init__.py  benchmark.py  conftest.py  test_entrypoint.py  test_operators.py  test_roller.py  test_rolling.py  test_tokens.py  test_tree.py  utilities.py
