[tool.poetry]
name = "rolling"
version = "1.2"
description = "An engine to parse and evaluate D&D-inspired roll expressions"
authors = ["Nick Thurmes <nthurmes@gmail.com>"]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
nose2 = "^0.9.1"
sphinx = "^2.1"

[tool.poetry.scripts]
roll = "rolling:roller.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
