[tool.poetry]
name = "dndice"
version = "2.8.0"
description = "An engine to parse and evaluate D&D-inspired roll expressions"
authors = ["Nick Thurmes <nthurmes@gmail.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
nose2 = "^0.9.1"
sphinx = "^2.1"
sphinx-rtd-theme = "^0.4.3"
coveralls = "^1.11"

[tool.poetry.scripts]
roll = "dndice:roller.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
